[package]
name = "zookeeper-operator-integration-tests"
version = "0.1.0"
authors = ["Razvan-Daniel Mihai <84674+razvan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
kube = "0.51"
kube-derive = "0.51"
kube-runtime = "0.51"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
indoc = "1.0"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
spectral = "0.6"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

