[package]
name = "zookeeper-operator-integration-tests"
version = "0.1.0"
authors = ["Razvan-Daniel Mihai <84674+razvan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch = "main"}

anyhow = "1.0"
futures = "0.3"
kube = "0.52"
kube-derive = "0.52"
kube-runtime = "0.52"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
indoc = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
spectral = "0.6"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

