[package]
authors = ["Razvan-Daniel Mihai <84674+razvan@users.noreply.github.com>"]
description = "Integration tests for the Stackable Operator for Apache ZooKeeper"
edition = "2018"
license = "Apache-2.0"
name = "zookeeper-operator-integration-tests"
version = "0.1.0-nightly"

[dependencies]
anyhow = "1.0"
indoc = "1.0"
integration-test-commons = { git = "https://github.com/stackabletech/integration-test-commons.git", branch = "main" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
semver = "1.0"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch = "main"}
uuid = { version = "0.8", features = ["v4"] }

